Improved logging, especially  to catch grammars that slow down antlr, added more general gramamr generation